# Low-LZ78

./: CMakeLists.txt  COPYING  README.md
include/: tools.h
include/SLZ78/: ghlz78.h  hash_D.h  hash_D_level.h  hlz78.h  map_D.h  mhlz78.h
lz78_c32/: basics.c  basics.h  bitmap.c  bitmap.h  clz78_min.c  clz78_uc.c  hash.c  hash.h  heap.c  heap.h  index_min.c  index_uc.c  lztrie.c  lztrie.h  makefile  parentheses.c  parentheses.h  trie_min.c  trie_min.h  trie_uc.c  trie_uc.h  ulz78_min.c  ulz78_uc.c
tests/: CompressText.cpp  DecompressHLZ.cpp
